--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
  <!-- SIDEBAR -->
- <div class="sidebar" [class.active]="display_sidenav"  #sidebar>
+ <div class="sidebar overflow-scroll" [class.active]="display_sidenav"  #sidebar>
     <div class="sidebar-logo">
         <img class="logo" src="../assets/images/logo-blanco.webp" alt="Comapny logo">
         <button class="sidebar-close" id="sidebar-close" (click)="toggleSidenav()">
