--- a/src/styles.css
+++ b/src/styles.css
@@ -190,6 +190,7 @@ a {
 
 .sidebar-options { 
     width: 100%;
+    margin-bottom: 100px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -347,6 +348,7 @@ nav {
 	padding: 0 24px;
 	display: flex;
 	align-items: center;
+    justify-content: space-between;
 	grid-gap: 24px;
 	font-family: var(--lato);
 	position: sticky;
