--- a/src/styles.css
+++ b/src/styles.css
@@ -382,6 +382,10 @@ nav .nav-link:hover {
 }
 nav span {
     color: var(--main-color);
+    display:  flex;
+    flex-direction: column;
+    
+    
 }
 nav form {
 	max-width: 400px;
