--- a/src/styles.css
+++ b/src/styles.css
@@ -384,7 +384,7 @@ nav span {
     color: var(--main-color);
     display:  flex;
     flex-direction: column;
-    font-size: small;
+    
 
     
 }
@@ -881,6 +881,16 @@ table td {
 /* SMALL SCREEN */
 
 @media only screen and (max-width: 850px) {
+
+    nav span {
+        color: var(--main-color);
+        display:  flex;
+        flex-direction: column;
+        font-size: 10px;
+    
+        
+    }
+
     .col-sm-1 {
         width: 8.33%;
     }
