--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,7 @@
             </div>
             <ul class="sidebar-menu sidebar-menu-dropdown-content" [style.height]="menuItem.dropdownHeight" [class.active]="menuItem.isDropdownOpen">
               <li *ngFor="let subMenuItem of menuItem.submenuItems">
-                <a routerLink="{{subMenuItem.route}}" href="#" (click)="cargarHeader(subMenuItem.route)"  >
+                <a routerLink="{{subMenuItem.route}}" href="#" (click)="cargarHeader(subMenuItem.label)"  >
                   {{ subMenuItem.label }}
                 </a>
               </li>
@@ -59,7 +59,7 @@
         <button class="mobile-toggle" id="mobile-toggle"  (click)="toggleSidenav()" >
             <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960" width="48"><path d="M120 816v-60h720v60H120Zm0-210v-60h720v60H120Zm0-210v-60h720v60H120Z"/></svg>
         </button>
-            
+        
         
         <nav>
             
