--- a/src/app/Modules/planes/listado-planes/listado-planes.component.html
+++ b/src/app/Modules/planes/listado-planes/listado-planes.component.html
@@ -141,7 +141,7 @@
     <div class="row">
         <div class="box-body overflow-scroll col-12" >
             
-            <div class="table-container col-12 box-body overflow-scroll" #tableContainer>
+            <div class="table-container " #tableContainer>
                 <table>
                   <thead>
                     <tr>
