--- a/src/styles.css
+++ b/src/styles.css
@@ -42,6 +42,7 @@ body {
     background-color: var(--body-bg);
     color: var(--text-color);
     position: relative;
+    
 }
 
 a {
@@ -524,6 +525,7 @@ nav .btn-outline{
 .main-content{
     padding: 10px 0 10px 10px;
     
+    
 }
 
 .box {
@@ -771,6 +773,8 @@ table td {
     display: flex;
     flex-wrap: wrap;
     margin: 0 0px;
+    width: 100%;
+    
 }
 
 [class*="col-"] {
