--- a/src/app/Modules/planes/listado-planes/listado-planes.component.css
+++ b/src/app/Modules/planes/listado-planes/listado-planes.component.css
@@ -3,20 +3,31 @@
 }
 
 
+
+table {
+  width: 100%;
+  min-width: 1000px;
+  
+}
+
 .table-container {
     position: relative;
     overflow: auto;
-    height: 300px;
+    height: 100vh ;
   }
 
   thead {
     position: sticky;
     top: 0;
-    background-color: #fff;
+    background-color: var(--body-bg);
     z-index: 1;
   }
-
-  td {
-    border: 1px solid #ccc;
-    padding: 5px;
+  table thead tr {
+    text-align: left;
   }
+
+    table th,
+    table td {
+        padding: 20px 0;
+        border-bottom: 1px solid var(--border-color);
+    }
