--- a/src/app/Modules/planes/listado-planes/listado-planes.component.css
+++ b/src/app/Modules/planes/listado-planes/listado-planes.component.css
@@ -28,6 +28,8 @@ table {
 
     table th,
     table td {
-        padding: 20px 0;
+        font-size: small;
+        text-align: left;
+        position: sticky;
         border-bottom: 1px solid var(--border-color);
     }
