--- a/src/app/Modules/planes/listado-planes/listado-planes.component.css
+++ b/src/app/Modules/planes/listado-planes/listado-planes.component.css
@@ -1,5 +1,6 @@
 .col-12 {
     width: 100%;
+    
 }
 
 
@@ -8,12 +9,14 @@ table {
   width: 100%;
   min-width: 1000px;
   
+  
 }
 
 .table-container {
     position: relative;
+    height: max-content;
     
-    height: 100vh ;
+    
   }
 
   thead {
@@ -30,6 +33,6 @@ table {
     table td {
         font-size: small;
         text-align: left;
-        position: sticky;
+        
         border-bottom: 1px solid var(--border-color);
     }
