--- a/src/app/Modules/planes/listado-planes/listado-planes.component.html
+++ b/src/app/Modules/planes/listado-planes/listado-planes.component.html
@@ -138,8 +138,8 @@
         </div>
     </div> -->
 
-    <div class="row">
-        <div class="box-body overflow-scroll col-12" >
+    <div class="">
+        <div class=" overflow-scroll  col-12" >
             
             <div class="table-container " #tableContainer>
                 <table>
@@ -170,19 +170,9 @@
                       <td>{{servicio.cupones}}</td>
                       <td> {{servicio.descuento}} </td>
                       <td>{{servicio.moneda}}</td>
-                      
-                      
-
-
-
-
-
-
-
-
-
-                      
                     </tr>
+                    
+                   
                   </tbody>
                 </table>
               </div>
