--- a/src/app/Modules/planes/listado-planes/listado-planes.component.html
+++ b/src/app/Modules/planes/listado-planes/listado-planes.component.html
@@ -171,6 +171,18 @@
                       <td> {{servicio.descuento}} </td>
                       <td>{{servicio.moneda}}</td>
                     </tr>
+                    <tr *ngFor="let servicio of listado_Servicio">
+                        <td>{{servicio.servicio}}</td>
+                        <td>{{servicio.descripcion}}</td>
+                        <td>{{servicio.precio_base}}</td>
+                        <td>{{servicio.edad_base}}</td>
+                        <td>{{servicio.edad_limite}}</td>
+                        <td>{{servicio.cobertura_global}}</td>
+                        <td>{{servicio.tiempo_limite}}</td>
+                        <td>{{servicio.cupones}}</td>
+                        <td> {{servicio.descuento}} </td>
+                        <td>{{servicio.moneda}}</td>
+                      </tr>
                     
                    
                   </tbody>
