--- a/src/styles.css
+++ b/src/styles.css
@@ -42,6 +42,7 @@ body {
     background-color: var(--body-bg);
     color: var(--text-color);
     position: relative;
+    overflow: hidden;
     
     
 }
@@ -320,6 +321,7 @@ a {
 
 .main {
     padding-left: var(--sidebar-size);
+    height: 100vh;
 }
 
 .main-header {
@@ -527,11 +529,13 @@ nav .btn-outline{
     padding: 10px 0 10px 10px;
     
     
+    
 }
 
 .box {
     background-color: var(--box-bg);
     padding: 20px;
+    margin-bottom: 20px;
     border: 0.5px solid var(--border-color);
     border-radius: var(--box-border-radius);
 }
