--- a/src/app/Modules/planes/listado-planes/listado-planes.component.html
+++ b/src/app/Modules/planes/listado-planes/listado-planes.component.html
@@ -139,7 +139,7 @@
     </div> -->
 
     <div class="">
-        <div class=" overflow-scroll  col-12" >
+        <div class="  col-12" >
             
             <div class="table-container " #tableContainer>
                 <table>
