--- a/src/app/Modules/planes/listado-planes/listado-planes.component.html
+++ b/src/app/Modules/planes/listado-planes/listado-planes.component.html
@@ -141,7 +141,7 @@
     <div class="">
         <div class="  col-12" >
             
-            <div class="table-container " #tableContainer>
+            <div class="table-container overflow-scroll" #tableContainer>
                 <table>
                   <thead>
                     <tr>
