--- a/src/styles.css
+++ b/src/styles.css
@@ -327,7 +327,7 @@ a {
 .main-header {
     height: var(--main-header-height);
     
-    z-index: 2;
+   
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -687,7 +687,7 @@ table td {
 }
 
 .overflow-scroll {
-    overflow-y: auto;
+    overflow-x: auto;
 }
 
 .overlay {
