--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -53,7 +53,7 @@
 <!-- END SIDEBAR -->
 
 <!-- MAIN CONTENT -->
-<div class="main">
+<div class="main ">
     <div class="main-header">
         
         <button class="mobile-toggle" id="mobile-toggle"  (click)="toggleSidenav()" >
@@ -74,7 +74,7 @@
             
         </nav>
     </div>
-    <div class="main-content">
+    <div class="main-content overflow-scroll ">
         <router-outlet></router-outlet>
         
     </div>
