--- a/src/app/Modules/planes/listado-planes/listado-planes.component.html
+++ b/src/app/Modules/planes/listado-planes/listado-planes.component.html
@@ -138,10 +138,10 @@
         </div>
     </div> -->
 
-    <div class="">
-        <div class=" overflow-scroll  col-12" >
+    <div >
+        <div class="  col-12" >
             
-            <div class="table-container " #tableContainer>
+            <div class="table-container   " #tableContainer>
                 <table>
                   <thead>
                     <tr>
