--- a/src/app/Modules/planes/listado-planes/listado-planes.component.css
+++ b/src/app/Modules/planes/listado-planes/listado-planes.component.css
@@ -12,11 +12,8 @@ table {
 
 .table-container {
     position: relative;
-    height: 80vh;
+    
     overflow: auto;
-    
-    
-    
     
   }
 
@@ -37,3 +34,36 @@ table {
         
         border-bottom: 1px solid var(--border-color);
     }
+
+
+    .animated-component {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      width: 100vh;
+      height: 100vh;
+      background-color: white;
+      box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+      overflow: hidden;
+    }
+    
+
+@media only screen and (max-width: 850px) {
+  .table-container {
+    height: 80vh;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .animated-component {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100vh;
+  }
+}
+
+
