--- a/src/styles.css
+++ b/src/styles.css
@@ -706,6 +706,9 @@ table td {
     display: block;
 }
 
+
+
+
 @media only screen and (max-width: 1280px) {
     .sidebar {
         transition: transform 0.3s ease-in-out;
@@ -838,6 +841,7 @@ table td {
 
 .col-12 {
     width: 100%;
+    height: 85vh;
 }
 
 /* MEDIUM SCREEN */
