--- a/src/app/Modules/planes/listado-planes/listado-planes.component.css
+++ b/src/app/Modules/planes/listado-planes/listado-planes.component.css
@@ -43,7 +43,7 @@ table {
       bottom: 0;
       width: 100vh;
       height: 100vh;
-      background-color: white;
+      background-color: var(--body-bg);
       box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
       overflow: hidden;
     }
