--- a/src/app/Modules/planes/listado-planes/listado-planes.component.css
+++ b/src/app/Modules/planes/listado-planes/listado-planes.component.css
@@ -12,7 +12,7 @@ table {
 
 .table-container {
     position: relative;
-    
+    max-height: 90vh; /* Set the maximum height of the table container */
     overflow: auto;
     
   }
@@ -37,16 +37,41 @@ table {
 
 
     .animated-component {
-      position: absolute;
+      /* position: absolute;
       top: 0;
       right: 0;
-      bottom: 0;
+      bottom:10px;
       width: 100vh;
       height: 100vh;
       background-color: var(--body-bg);
       box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
-      overflow: hidden;
+      overflow: auto; */
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 70vh;
+      height: 100vh;
+      background-color: var(--body-bg);
+      box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+      display: none;/* Add this property to center the content */
+      justify-content: center; /* Add this property to center the content */
+      align-items: center; /* Add this property to center the content */
+      z-index: 10; /* Add this property to ensure the component is above the table */
+      opacity: 1 !important; /* Add this property to override the animation opacity */
+      max-width: 100%;
+      transform: translateX(100%);
+      transition:  0.3s ease-in-out;
+        max-width: 100%;
+        
+
+
     }
+
+    .animated-component.active{
+      transform: translateX(0%);
+      display: flex;
+    }
+    
     
 
 @media only screen and (max-width: 850px) {
@@ -57,12 +82,7 @@ table {
 
 @media only screen and (max-width: 745px) {
   .animated-component {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    width: 100vh;
+    width: 100%;
   }
 }
 
