--- a/src/styles.css
+++ b/src/styles.css
@@ -44,6 +44,8 @@ body {
     background-color: var(--body-bg);
     color: var(--text-color);
     position: relative;
+    width: 100%;
+    height: 100%;
     
     
     
