--- a/src/app/Modules/planes/listado-planes/listado-planes.component.css
+++ b/src/app/Modules/planes/listado-planes/listado-planes.component.css
@@ -12,7 +12,7 @@ table {
 
 .table-container {
     position: relative;
-    max-height: 90vh; /* Set the maximum height of the table container */
+    max-height: 85vh; /* Set the maximum height of the table container */
     overflow: auto;
     
   }
@@ -26,15 +26,18 @@ table {
   table thead tr {
     text-align: left;
   }
+  table th
+  {
+     font-size: small;
+     text-align: center;
+     
+     border-bottom: 1px solid var(--border-color);
+ }
 
-    table th,
-    table td {
-        font-size: small;
-        text-align: left;
-        
-        border-bottom: 1px solid var(--border-color);
-    }
-
+ table td{
+   text-align: center;
+   font-size: small;
+ }
 
     .animated-component {
       /* position: absolute;
@@ -83,6 +86,7 @@ table {
 @media only screen and (max-width: 745px) {
   .animated-component {
     width: 100%;
+    height: 100vh;
   }
 }
 
