--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
  <!-- SIDEBAR -->
- <div class="sidebar overflow-scroll" [class.active]="display_sidenav"  #sidebar>
+ <div   class="sidebar overflow-scroll" [class.active]="display_sidenav"  #sidebar>
     <div class="sidebar-logo">
         <img class="logo" src="../assets/images/logo-blanco.webp" alt="Comapny logo">
         <button class="sidebar-close" id="sidebar-close" (click)="toggleSidenav()">
@@ -56,7 +56,7 @@
 <div class="main ">
     <div class="main-header">
         
-        <button class="mobile-toggle" id="mobile-toggle"  (click)="toggleSidenav()" >
+        <button  #mobiletoggle class="mobile-toggle" id="mobile-toggle"  (click)="toggleSidenav()" >
             <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960" width="48"><path d="M120 816v-60h720v60H120Zm0-210v-60h720v60H120Zm0-210v-60h720v60H120Z"/></svg>
         </button>
         
